deploy: caoyue/blog@1db47f46ab9a9a0c583f2d24b14aa499b0d1fd4f

--- a/404.html
+++ b/404.html
@@ -55,9 +55,9 @@
                                                Z.                                    W,
                                               x7                                     :
                                               i                                       L
-    </pre></div></div><footer class=footer><div>©2022 <a href=/>且听疯吟</a>. designed
+    </pre></div></div><footer class=footer><div>©2023 <a href=/>且听疯吟</a>. designed
 by <a href=https://caoyue.me target=_blank>caoyue</a>.
 powered by <a href=https://gohugo.io/ target=_blank>hugo</a>.
 <script defer src=https://static.cloudflareinsights.com/beacon.min.js data-cf-beacon='{"token": "1a24e73fd4284bfa8b43ecf5a5c2c100"}'></script>
 <script defer src=https://use.typekit.net/jdb5cpn.js></script>
-<script type=text/javascript>try{Typekit.load({async:!0})}catch(e){}</script></div></footer></div></body></html>
+<script type=text/javascript>try{Typekit.load({async:!0})}catch{}</script></div></footer></div></body></html>
