--- a/tweets/202205171549/index.html
+++ b/tweets/202205171549/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=zh-hans><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><meta name=apple-mobile-web-app-capable content="yes"><meta name=apple-mobile-web-app-status-bar-style content="default"><meta name=format-detection content="telephone=no"><meta name=theme-color content="#a6d6d6"><meta name=referrer content="no-referrer"><meta name=description content="以前喜欢孙悟空，多么不可一世，然而最终还是要做斗战胜佛。
+<!doctype html><html lang=zh-Hans><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><meta name=apple-mobile-web-app-capable content="yes"><meta name=apple-mobile-web-app-status-bar-style content="default"><meta name=format-detection content="telephone=no"><meta name=theme-color content="#a6d6d6"><meta name=referrer content="no-referrer"><meta name=description content="以前喜欢孙悟空，多么不可一世，然而最终还是要做斗战胜佛。
 后来喜欢哪吒，不为翻江倒海，只为那份愤怒和决绝。
 血脉、家庭、社会、政治、现实，无处不在的枷锁。
 成佛不能解脱，唯有决绝。
